--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -6,7 +6,7 @@
     <div id="left-nav" class="">
         <div class="my-3 nav-user">
             <div class="mb-2" id="user-fullname">dr. Argadia Yuniriyadi, SpA</div>
-            <button class="btn btn-danger w-100">Keluar</button>
+            <button class="btn btn-danger w-100" onclick="logout()">Keluar</button>
         </div>
         <div class="nav-close" onclick="leftNavShow(false)">
             <i class="fa-regular fa-circle-xmark"></i>
