--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -2,11 +2,10 @@
     <div class="top-nav">
         <div onclick="leftNavShow(true)"><i class="fa-solid fa-bars"></i></div>
     </div>
-    <div class="antrian-top">lkjasd</div>
     <div id="left-nav" class="">
-        <div class="my-3 nav-user">
-            <div class="mb-2" id="user-fullname">dr. Argadia Yuniriyadi, SpA</div>
-            <button class="btn btn-danger w-100" onclick="logout()">Keluar</button>
+        <div class="nav-user">
+            <div class="" id="user-fullname">dr. Argadia Yuniriyadi, SpA</div>
+            <button class="btn btn-danger" onclick="logout()">Keluar</button>
         </div>
         <div class="nav-close" onclick="leftNavShow(false)">
             <i class="fa-regular fa-circle-xmark"></i>
@@ -32,5 +31,6 @@
             <div class="nav-hidden">Setting</div>
         </div>
     </div>
-    <div id="central-dashboard">a</div>
+    <div id="central-dashboard" class="border">a</div>
+    <div id="antrian-pane">asd</div>
 </div>
