--- a/html/hidden.html
+++ b/html/hidden.html
@@ -4,7 +4,7 @@
 </div>
 <div id="hidden-div">
     <!-- loader -->
-    <div class="loader-wrapper" id="loader">
+    <div class="loader-wrapper d-none" id="loader">
         <div class="mb-3"><strong>Klinik dr. Argadia, SpA</strong></div>
         <div class="spinner-border mx-auto" role="status" aria-hidden="true"></div>
     </div>
