--- a/html/login.html
+++ b/html/login.html
@@ -1,6 +1,7 @@
-<div class="w-100 d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <div class="bg-white p-4 px-5 rounded shadow">
-        <div class="h3 mb-4">Login</div>
+<div class="w-100 d-flex flex-column justify-content-center align-items-center" style="height: 100vh;">
+    <div class="text-white mb-5 h3">Klinik dr. Argadia, SpA</div>
+    <div class="bg-white p-4 px-4 rounded shadow">
+        <div class="h6 mb-4 text-center">Login</div>
         <form class="" onsubmit="return false">
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="login-username" placeholder="Username" autocomplete="off">
