--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -4,7 +4,7 @@
     </div>
     <div id="left-nav" class="">
         <div class="nav-user">
-            <div class="" id="user-fullname">dr. Argadia Yuniriyadi, SpA</div>
+            <div class="text-center" id="user-fullname">dr. Argadia Yuniriyadi, SpA</div>
             <button class="btn btn-danger" onclick="logout()">Keluar</button>
         </div>
         <div class="nav-close" onclick="leftNavShow(false)">
@@ -35,8 +35,8 @@
             <div class="nav-hidden">Setting</div>
         </div>
     </div>
-    <div id="central-dashboard" class="border">
-        <div w3-include-html="" id="mainBox"></div>
+    <div id="central-dashboard" class="">
+        <div class="w-100 h-100" w3-include-html="" id="mainBox"></div>
     </div>
     <!-- <div id="antrian-pane">asd</div> -->
 </div>
