--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/hidden.css">
     <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" href="/css/home.css">
 </head>
 
 <body onload="onload()">
@@ -25,6 +26,7 @@
     <script type="text/javascript" src="script/onload.js"></script>
     <script type="text/javascript" src="script/login.js"></script>
     <script type="text/javascript" src="script/dashboard.js"></script>
+    <script type="text/javascript" src="script/antrian.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
