--- a/html/home.html
+++ b/html/home.html
@@ -195,6 +195,9 @@
                         autocomplete="off">
                     <input type="text" class="form-control form-control-sm" id="login-password"
                         placeholder="Nama Pasien" autocomplete="off">
+                    <input type="checkbox" label name="" id="searching-filter-show">
+                    <label for="searching-filter-show" id="searching-filter-show-label"><i
+                            class="fa-solid fa-filter"></i></label>
                 </div>
                 <div>
                     <input type="text" class="form-control form-control-sm" id="login-password"
@@ -203,6 +206,7 @@
                         autocomplete="off">
                 </div>
             </div>
+
             <div class="table-container">
                 <table class="table table-sm table-striped">
                     <thead class="text-center">
@@ -287,6 +291,7 @@
                     </tbody>
                 </table>
             </div>
+
         </div>
     </div>
 </div>
