--- a/html/home.html
+++ b/html/home.html
@@ -15,7 +15,7 @@
                 <div id="antrian-page-antrian">
                     <div id="antrian-on-container" class="antrian-sub-container">
                         <div class="android-hide">Dalam Antrian</div>
-                        <button class="android-show"><i class="fa-solid fa-calendar"></i></button>
+                        <button class="android-show"><i class="fa-solid fa-maximize"></i></button>
                         <button class="android-show">
                             <div>Antri</div> <span class="badge bg-secondary">0</span>
                         </button>
@@ -131,7 +131,7 @@
                             <tbody>
                                 <tr>
                                     <th>Nama</th>
-                                    <td id="detail-nama">Argadia yunnlkj lkajsd</td>
+                                    <td id="detail-nama">Argadia yunnlkj lkajsd lkj alkj asdlkj </td>
                                 </tr>
                                 <tr>
                                     <th>TTL</th>
@@ -156,30 +156,40 @@
                                 <th>Alamat</th>
                                 <td>lkj lkj alskdj lk qwldn lkj aldwmn a,mn wda</td>
                             </tr>
-                            <tr>
-                                <th colspan="2" class="table-sub">Ayah</th>
-                            </tr>
-                            <tr>
-                                <th>Nama</th>
-                                <td>Sujoko Hadi</td>
-                            </tr>
-                            <tr>
-                                <th>Pekerjaan</th>
-                                <td>Karyawan Swasta</td>
-                            </tr>
-                            <tr>
-                                <th colspan="2" class="table-sub">Ibu</th>
-                            </tr>
-                            <tr>
-                                <th>Nama</th>
-                                <td>Sujoko Hadi</td>
-                            </tr>
-                            <tr>
-                                <th>Pekerjaan</th>
-                                <td>Karyawan Swasta</td>
-                            </tr>
                         </tbody>
                     </table>
+                    <div>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th colspan="2" class="table-sub">Ayah</th>
+                                </tr>
+                                <tr>
+                                    <th>Nama</th>
+                                    <td>Sujoko Hadi</td>
+                                </tr>
+                                <tr>
+                                    <th>Pekerjaan</th>
+                                    <td>Karyawan Swasta</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th colspan="2" class="table-sub">Ibu</th>
+                                </tr>
+                                <tr>
+                                    <th>Nama</th>
+                                    <td>Sujoko Hadi</td>
+                                </tr>
+                                <tr>
+                                    <th>Pekerjaan</th>
+                                    <td>Karyawan Swasta</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <div>
                     <button class="btn btn-primary mb-2">Daftar Antrian</button>
@@ -206,92 +216,92 @@
                         autocomplete="off">
                 </div>
             </div>
-
-            <div class="table-container">
-                <table class="table table-sm table-striped">
-                    <thead class="text-center">
-                        <tr>
-                            <th scope="col">No RM</th>
-                            <th scope="col">Nama</th>
-                            <th scope="col">TTL</th>
-                            <th scope="col">Ayah</th>
-                            <th scope="col">Ibu</th>
-                            <th scope="col">Alamat</th>
-                        </tr>
-                    </thead>
-                    <tbody class="">
-                        <tr>
-                            <td>23M001</td>
-                            <td>Argadia Yuniasiu ralkj rwrijasd</td>
-                            <td>
-                                <div>12 Jun 2023</div>
-                                <div>15 hari</div>
-                            </td>
-                            <td>
-                                <div>Suhadi</div>
-                                <div>ABRI</div>
-                            </td>
-                            <td>
-                                <div>Siti Hajsij</div>
-                                <div>-</div>
-                            </td>
-                            <td>Sukabumoer, RT01, 012, Buppasd Boyoasdl, Jasdwd</td>
-                        </tr>
-                        <tr>
-                            <td>23M001</td>
-                            <td>Argadia Yuniasiu ralkj rwrijasd</td>
-                            <td>
-                                <div>12 Jun 2023</div>
-                                <div>15 hari</div>
-                            </td>
-                            <td>
-                                <div>Suhadi</div>
-                                <div>ABRI</div>
-                            </td>
-                            <td>
-                                <div>Siti Hajsij</div>
-                                <div>-</div>
-                            </td>
-                            <td>Sukabumoer, RT01, 012, Buppasd Boyoasdl, Jasdwd</td>
-                        </tr>
-                        <tr>
-                            <td>23M001</td>
-                            <td>Argadia Yuniasiu ralkj rwrijasd</td>
-                            <td>
-                                <div>12 Jun 2023</div>
-                                <div>15 hari</div>
-                            </td>
-                            <td>
-                                <div>Suhadi</div>
-                                <div>ABRI</div>
-                            </td>
-                            <td>
-                                <div>Siti Hajsij</div>
-                                <div>-</div>
-                            </td>
-                            <td>Sukabumoer, RT01, 012, Buppasd Boyoasdl, Jasdwd</td>
-                        </tr>
-                        <tr>
-                            <td>23M001</td>
-                            <td>Argadia Yuniasiu ralkj rwrijasd</td>
-                            <td>
-                                <div>12 Jun 2023</div>
-                                <div>15 hari</div>
-                            </td>
-                            <td>
-                                <div>Suhadi</div>
-                                <div>ABRI</div>
-                            </td>
-                            <td>
-                                <div>-</div>
-                                <div>-</div>
-                            </td>
-                            <td>Sukabumoer, RT01, 012, Buppasd Boyoasdl, Jasdwd</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div>
+                <div class="table-container">
+                    <table class="table table-sm table-striped">
+                        <thead class="text-center">
+                            <tr>
+                                <th scope="col">No RM</th>
+                                <th scope="col">Nama</th>
+                                <th scope="col">TTL</th>
+                                <th scope="col">Ayah</th>
+                                <th scope="col">Ibu</th>
+                                <th scope="col">Alamat</th>
+                            </tr>
+                        </thead>
+                        <tbody class="">
+                            <tr>
+                                <td>23M001</td>
+                                <td>Argadia Yuniasiu ralkj rwrijasd</td>
+                                <td>
+                                    <div>12 Jun 2023</div>
+                                    <div>15 hari</div>
+                                </td>
+                                <td>
+                                    <div>Suhadi</div>
+                                    <div>ABRI</div>
+                                </td>
+                                <td>
+                                    <div>Siti Hajsij</div>
+                                    <div>-</div>
+                                </td>
+                                <td>Sukabumoer, RT01, 012, Buppasd Boyoasdl, Jasdwd</td>
+                            </tr>
+                            <tr>
+                                <td>23M001</td>
+                                <td>Argadia Yuniasiu ralkj rwrijasd</td>
+                                <td>
+                                    <div>12 Jun 2023</div>
+                                    <div>15 hari</div>
+                                </td>
+                                <td>
+                                    <div>Suhadi</div>
+                                    <div>ABRI</div>
+                                </td>
+                                <td>
+                                    <div>Siti Hajsij</div>
+                                    <div>-</div>
+                                </td>
+                                <td>Sukabumoer, RT01, 012, Buppasd Boyoasdl, Jasdwd</td>
+                            </tr>
+                            <tr>
+                                <td>23M001</td>
+                                <td>Argadia Yuniasiu ralkj rwrijasd</td>
+                                <td>
+                                    <div>12 Jun 2023</div>
+                                    <div>15 hari</div>
+                                </td>
+                                <td>
+                                    <div>Suhadi</div>
+                                    <div>ABRI</div>
+                                </td>
+                                <td>
+                                    <div>Siti Hajsij</div>
+                                    <div>-</div>
+                                </td>
+                                <td>Sukabumoer, RT01, 012, Buppasd Boyoasdl, Jasdwd</td>
+                            </tr>
+                            <tr>
+                                <td>23M001</td>
+                                <td>Argadia Yuniasiu ralkj rwrijasd</td>
+                                <td>
+                                    <div>12 Jun 2023</div>
+                                    <div>15 hari</div>
+                                </td>
+                                <td>
+                                    <div>Suhadi</div>
+                                    <div>ABRI</div>
+                                </td>
+                                <td>
+                                    <div>-</div>
+                                    <div>-</div>
+                                </td>
+                                <td>Sukabumoer, RT01, 012, Buppasd Boyoasdl, Jasdwd</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-
         </div>
     </div>
 </div>
