--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body onload="onload()">
     <div w3-include-html="/html/hidden.html" class="include-HTML"></div>
-    <div w3-include-html="/html/login.html" class="include-HTML" id="mainFrame"></div>
-    <!-- <div w3-include-html="/html/dashboard.html" class="include-HTML" id="mainFrame"></div> -->
+    <!-- <div w3-include-html="/html/login.html" class="include-HTML" id="mainFrame"></div> -->
+    <div w3-include-html="/html/dashboard.html" class="include-HTML" id="mainFrame"></div>
 
     <script type="text/javascript" src="script/common.js"></script>
     <script type="text/javascript" src="script/onload.js"></script>
