--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="/css/home.css">
 </head>
 
-<body onload="onload()">
+<body>
     <div w3-include-html="/html/hidden.html" class="include-HTML"></div>
-    <!-- <div w3-include-html="/html/login.html" class="include-HTML" id="mainFrame"></div> -->
-    <div w3-include-html="/html/dashboard.html" class="include-HTML" id="mainFrame"></div>
+    <div w3-include-html="/html/login.html" class="include-HTML" id="mainFrame"></div>
+    <!-- <div w3-include-html="/html/dashboard.html" class="include-HTML" id="mainFrame"></div> -->
 
     <script type="text/javascript" src="script/common.js"></script>
     <script type="text/javascript" src="script/onload.js"></script>
@@ -42,6 +42,7 @@
         const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
         const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl));
     </script>
+    <script type="text/javascript" src="script/dev.js"></script>
 </body>
 
 </html>
