--- a/html/home.html
+++ b/html/home.html
@@ -2,26 +2,35 @@
 
     <div class="home-pasien-container">
         <div class="pasien-card">
-            <div id="pasien-card-name">Argadia lkj lkja sldkjm, lkj alskj asdn</div>
-            <div id="pasien-card-noRM">23M0001</div>
-            <div class="pasien-card-other">PEREMPUAN</div>
-            <div id="pasien-card-ttl" class="pasien-card-other">21/10/2022 <span>(12th 11bln 3hr)</span></div>
-            <div class="pasien-card-other">jl Anggrek, Kebonso, Pulisen, Boyolali</div>
-            <div class="row">
-                <div class="col">
-                    <div>Ayah</div>
-                    <div>H. Hagsdkjh mnd wd</div>
-                    <div>Pekerjaan Swasta</div>
-                </div>
-                <div class="col">
-                    <div>Ayah</div>
-                    <div>H. Hagsdkjh mnd wd</div>
-                    <div>Ibu RT</div>
-                </div>
+            <div>
+                <div></div>
+                <div id="pasien-card-noRM">23M0001</div>
             </div>
-            <div class="pasien-card-btn-container">
-                <button class="btn btn-primary">Daftar Antrian</button>
-                <button class="btn btn-primary">Edit</button>
+            <div>
+                <div>
+                    <div id="pasien-card-name">Argadia lkj lkja sldkjm, lkj alskj asdn</div>
+                    <div class="pasien-card-other">PEREMPUAN</div>
+                    <div id="pasien-card-ttl" class="pasien-card-other">21/10/2022 <span>(12th 11bln 3hr)</span></div>
+                    <div class="pasien-card-other">jl Anggrek, Kebonso, Pulisen, Boyolali</div>
+                    <div class="pasien-card-orangtua">
+                        <div>Ayah</div>
+                        <div>
+                            <div>H. Hagsdkjh mnd wd</div>
+                            <div>Pekerjaan Swasta</div>
+                        </div>
+                    </div>
+                    <div class="pasien-card-orangtua">
+                        <div>Ibu</div>
+                        <div>
+                            <div>H. Hagsdkjh mnd wd</div>
+                            <div>Ibu RT</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pasien-card-btn-container">
+                    <button class="btn btn-primary">Daftar Antrian</button>
+                    <button class="btn btn-primary">Edit</button>
+                </div>
             </div>
         </div>
         <div class="home-search">
