--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/hidden.css">
     <link rel="stylesheet" href="/css/dashboard.css">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/newReg.css">
 </head>
 
 <body>
@@ -26,8 +27,10 @@
     <script type="text/javascript" src="script/onload.js"></script>
     <script type="text/javascript" src="script/login.js"></script>
     <script type="text/javascript" src="script/dashboard.js"></script>
-    <script type="text/javascript" src="script/antrian.js"></script>
+    <script type="text/javascript" src="script/home.js"></script>
+    <script type="text/javascript" src="script/newReg.js"></script>
 
+    <script src="https://unpkg.com/imask"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
